# WindowOpencvCmakeExample

./: .gitignore  CMakeLists.txt  README.md  sample.cpp
.github/workflows/: ci.yml
3rd_binary/opencv/: CMakeLists.txt
